--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "kds-ui",
-  "homepage": "https://mcgregorst.github.io/kitchenapp",
+  "homepage": "https://mcgregorst.github.io/newkitchenapp",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
