--- a/package.json
+++ b/package.json
@@ -10,12 +10,12 @@
     "@testing-library/user-event": "^12.6.3",
     "axios": "^0.21.4",
     "formik": "^2.2.6",
-    "immer": "^8.0.1",
+    "immer": "^9.0.15",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-redux": "^7.2.2",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "4.0.2",
+    "react-scripts": "^2.1.3",
     "react-transition-group": "^4.4.2",
     "redux": "^4.0.5",
     "redux-devtools-extension": "^2.13.9",
@@ -53,5 +53,8 @@
       "not dead",
       "not op_mini all"
     ]
+  },
+  "devDependencies": {
+    "gh-pages": "^4.0.0"
   }
 }
