--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "kds-ui",
-  "homepage": "https://mcgregorst.github.io/kitchenapp",
+  "homepage": "https://mcgregorst.github.io/newkitchenapp",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -15,7 +15,7 @@
     "react-dom": "^17.0.1",
     "react-redux": "^7.2.2",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "^2.1.3",
+    "react-scripts": "^5.0.1",
     "react-transition-group": "^4.4.2",
     "redux": "^4.0.5",
     "redux-devtools-extension": "^2.13.9",
@@ -55,6 +55,7 @@
     ]
   },
   "devDependencies": {
-    "gh-pages": "^4.0.0"
+    "gh-pages": "^4.0.0",
+    "react-router": "^6.4.2"
   }
 }
